# fruitymesh

./: CMakeLists.txt  flash.sh  upload_fruitymesh.jlink
linker/: cmake_gcc_nrf51_s130_32kb.ld
